--- a/Source/CommonNote.PluginInterface/CommonNote.PluginInterface.csproj
+++ b/Source/CommonNote.PluginInterface/CommonNote.PluginInterface.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CommonNote.PluginInterface</RootNamespace>
     <AssemblyName>CommonNote.PluginInterface</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICommonNotePlugin.cs" />
+    <Compile Include="IRemoteStorageConfiguration.cs" />
+    <Compile Include="IRemoteStorageConnection.cs" />
+    <Compile Include="ITag.cs" />
+    <Compile Include="ICommonNoteProvider.cs" />
+    <Compile Include="INote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
