Implementing SimpleNote API

--- a/.gitignore
+++ b/.gitignore
@@ -426,3 +426,8 @@ $RECYCLE.BIN/
 # !tools/packages.config
 
 # End of https://www.gitignore.io/api/csharp,visualstudio,windows
+
+####################################
+
+Lib/
+Bin/
