--- a/Source/Plugins/LocalStoragePlugin/LocalStoragePlugin.csproj
+++ b/Source/Plugins/LocalStoragePlugin/LocalStoragePlugin.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CommonNote.Plugins.LocalStorage</RootNamespace>
     <AssemblyName>LocalStoragePlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocalStorageConfig.cs" />
+    <Compile Include="LocalStorageConnection.cs" />
     <Compile Include="LocalStoragePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
