--- a/Source/Plugins/SimpleNotePlugin/SimpleNotePlugin.csproj
+++ b/Source/Plugins/SimpleNotePlugin/SimpleNotePlugin.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CommonNote.Plugins.SimpleNote</RootNamespace>
     <AssemblyName>SimpleNotePlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="SimpleNote.cs" />
     <Compile Include="SimpleNoteAPI.cs" />
+    <Compile Include="SimpleNoteConfig.cs" />
+    <Compile Include="SimpleNoteConnection.cs" />
     <Compile Include="SimpleNotePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,6 +55,11 @@
     <ProjectReference Include="..\..\CommonNote.PluginInterface\CommonNote.PluginInterface.csproj">
       <Project>{a18f5e8c-5894-41f1-9b4c-f66c66490e2d}</Project>
       <Name>CommonNote.PluginInterface</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\External\CSharpUtils\CSharpUtils.csproj">
+      <Project>{d661cd9f-8934-496d-8332-bc82aab77598}</Project>
+      <Name>CSharpUtils</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
