--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Source\\External\\CSharpUtils"]
-	path = Source\\External\\CSharpUtils
+[submodule "Source/External/CSharpUtils"]
+	path = Source/External/CSharpUtils
 	url = https://github.com/Mikescher/CSharpUtils
