working on NoteRepository

--- a/Source/CommonNote.App/CommonNote.App.csproj
+++ b/Source/CommonNote.App/CommonNote.App.csproj
@@ -38,6 +38,10 @@
     <StartupObject>CommonNote.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Lib\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -57,7 +61,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Settings\CommonNoteSettings.cs" />
+    <Compile Include="Repository\NoteRepository.cs" />
+    <Compile Include="Settings\AppSettings.cs" />
     <Compile Include="WPF\Converter\CreatePluginSettingsGridConverter.cs" />
     <Compile Include="WPF\Windows\MainWindowViewmodel.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -68,7 +73,7 @@
     <Compile Include="WPF\Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings\SynchronizationFrequency.cs" />
+    <Compile Include="Settings\ConfigInterval.cs" />
     <Page Include="WPF\Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -87,7 +92,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PluginManager.cs" />
+    <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -105,14 +110,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonNote.PluginInterface\CommonNote.PluginInterface.csproj">
