--- a/Source/Plugins/LocalStoragePlugin/LocalStoragePlugin.csproj
+++ b/Source/Plugins/LocalStoragePlugin/LocalStoragePlugin.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocalNote.cs" />
     <Compile Include="LocalStorageConfig.cs" />
     <Compile Include="LocalStorageConnection.cs" />
     <Compile Include="LocalStoragePlugin.cs" />
@@ -49,6 +50,11 @@
     <ProjectReference Include="..\..\CommonNote.PluginInterface\CommonNote.PluginInterface.csproj">
       <Project>{a18f5e8c-5894-41f1-9b4c-f66c66490e2d}</Project>
       <Name>CommonNote.PluginInterface</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\External\CSharpUtils\CSharpUtils.csproj">
+      <Project>{D661CD9F-8934-496D-8332-BC82AAB77598}</Project>
+      <Name>CSharpUtils</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
