--- a/Source/Plugins/SimpleNotePlugin/SimpleNotePlugin.csproj
+++ b/Source/Plugins/SimpleNotePlugin/SimpleNotePlugin.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\Lib\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
