--- a/Source/CommonNote.App/packages.config
+++ b/Source/CommonNote.App/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
   <package id="jacobslusser.ScintillaNET" version="3.5.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
 </packages>
