--- a/Source/AlephNote.App/packages.config
+++ b/Source/AlephNote.App/packages.config
@@ -3,4 +3,5 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net45" />
   <package id="jacobslusser.ScintillaNET" version="3.5.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
 </packages>
