--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -52,6 +52,7 @@
     <Compile Include="StandardNoteAPIException.cs" />
     <Compile Include="StandardNotePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardNoteData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj">
