--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -53,6 +53,7 @@
     <Compile Include="RemoteUploadResult.cs" />
     <Compile Include="RemoteException.cs" />
     <Compile Include="RemoteDownloadResult.cs" />
+    <Compile Include="ISimpleJsonRest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
