--- a/.gitignore
+++ b/.gitignore
@@ -275,8 +275,8 @@ __pycache__/
 *.pyc
 
 # Cake - Uncomment if you are using it
-# tools/**
-# !tools/packages.config
+tools/**
+!tools/packages.config
 
 ### Windows ###
 # Windows thumbnail cache files
